--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -125,4 +125,4 @@ test_job_cpp:
   - 'apt install g++-7 -y'
   - 'update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-7 60 --slave /usr/bin/g++ g++ /usr/bin/g++-7'
   - 'cd ${PATH_TO_CPP_TESTS}'
-  - 'for i in $(ls -d */); do cd $i; cmake .; make; ./i$(ls | egrep ^UnitTestCommon[A-Z][a-z]*[^\.]$); cd ..; done'
+  - 'for i in $(ls -d */); do cd $i; cmake .; make; ./$(ls | egrep ^UnitTestCommon[A-Z][a-z]*[^\.]$); cd ..; done'
