--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -92,24 +92,14 @@ build_job_core:
   script:
   - 'nuget restore ${PATH_TO_CORE_SOLUTION}'
   - 'MONO_IOMAP=case msbuild /t:Build /p:Configuration=${BUILD_CONF} /p:Platform="Any CPU" ${PATH_TO_CORE_SOLUTION}'
-  cache:
-    key: binaries
-    paths:
-    - '${PATH_TO_CORE_TESTS}'
-    policy: push
   except:
   - tags
 
 test_job_core:
   image: microsoft/dotnet
   stage: test
-  cache:
-    key: binaries
-    paths:
-    - '${PATH_TO_CORE_TESTS}'
-    policy: pull
   script:
-  - for i in $(ls ${PATH_TO_CORE_TESTS}*.dll | egrep ^*/${UT_PREFIX}*); do dotnet test $i; done
+  - for i in $(ls ${PROJECT_CORE_NAME}/Tests/*/${UT_PREFIX}*); do dotnet test $i; done
 
 release_job_core:
  image: mono:latest
